# mcp-judge

./: .env.template  CLAUDE.md  README.md  mcp-judge.code-workspace  pyproject.toml
data/: README.md  agent_profiles.yaml  open-genes-questions.json  opengenes-mcp-config-stdio.json  sample_questions.json  simple_questions.json
src/mcp_judge/: __init__.py  agent_profiles.yaml  judge.py  manual.py  run.py
